[metadata]
name = ns_graph
version = 0.1
author = Ccve
author_email = 3duardak1@gmail.com
description = Data utility tool using Netskope API
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Code = https://github.com/notccve/ns-graph
    Issue tracker = https://github.com/notccve/ns-graph/issues

[options]
python_requires = >= 3.6
packages = ns_graph
include_package_data = true
install_requires =
    pytz
    fire
    pandas
    matplotlib
    openpyxl
    requests
    certifi
    urllib3
